implemented child functionalities as GET, SAVE, DELETE child, also integration tests for Repository, implemented @MANYTOMANY for Activities
